force-app/main/default/objects/TCL_Learning_Lesson__c/TCL_Learning_Lesson__c.object-meta.xml
<CustomObject>
    <label>Learning Lesson</label>
    <nameField>
        <displayFormat>LL-{00000000}</displayFormat>
        <label>Learning Lesson ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Lesson</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>