force-app/main/default/objects/TCL_Learning_Lesson__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>TCL_Attendee__c</referenceTo>
    <relationshipLabel>Learning Lesson</relationshipLabel>
    <relationshipName>Learning_Lesson</relationshipName>
    <type>Lookup</type>
</CustomField>