force-app/main/default/objects/TCL_Learning_Lesson__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID( Attendee__r.Attendee_Employee__c )
,   Attendee__r.Attendee_Employee__r.Name  
,&quot;_self&quot;)</formula>
    <label>Employee</label>
    <type>Text</type>
</CustomField>