force-app/main/default/objects/TCL_Learning_Lesson__c/fields/Lesson__c.field-meta.xml
<CustomField>
    <fullName>Lesson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lesson</label>
    <referenceTo>Lesson__c</referenceTo>
    <relationshipLabel>Learning Lesson</relationshipLabel>
    <relationshipName>Learning_Lesson</relationshipName>
    <type>Lookup</type>
</CustomField>